--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
+    "autoprefixer": "^10.4.19",
     "next": "14.2.3",
     "postcss": "^8",
     "react": "^18",
