--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@material-tailwind/react": "^2.1.9",
+    "@mdi/js": "^7.4.47",
+    "@mdi/react": "^1.6.1",
     "autoprefixer": "^10.4.19",
     "next": "14.2.3",
     "postcss": "^8",
