--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@mdi/react": "^1.6.1",
     "autoprefixer": "^10.4.19",
     "next": "14.2.3",
+    "next-auth": "^4.24.7",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
