--- a/package.json
+++ b/package.json
@@ -13,13 +13,15 @@
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
     "autoprefixer": "^10.4.19",
+    "isomorphic-fetch": "^3.0.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "postcss": "^8",
     "react": "^18",
     "react-dom": "^18",
     "tailwindcss": "^3.4.1",
-    "typescript": "5.4.5"
+    "typescript": "5.4.5",
+    "url": "^0.11.3"
   },
   "devDependencies": {
     "@types/node": "20.12.7",
